added homepage in package json file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vizlix-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vimalrajsiwan.github.io/next-web",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
