--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "deploy": "npm run build && gh-pages -d out"
+    "deploy": "npm run build && gh-pages -d out --branch gh-pages --dotfiles"
   },
   "dependencies": {
     "next": "15.5.6",
