added SEO meta tags, updated pages

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build && gh-pages -d out --branch gh-pages --dotfiles"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
