--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "vizlyx-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vizlyx.com",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "deploy": "npm run build && gh-pages -d out --branch gh-pages --dotfiles"
+    "lint": "eslint"
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
@@ -26,7 +24,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
